--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <title>My Website</title>
-        <link rel="stylesheet" href="styles/general.css">
-        <link rel="stylesheet" href="styles/about.css">
-        <link rel="stylesheet" href="styles/contact.css">
-        <link rel="stylesheet" href="styles/home.css">
-        <link rel="stylesheet" href="styles/media-queries.css">
-        <link rel="stylesheet" href="styles/services.css">
-        <link rel="stylesheet" href="styles/testimonials.css">
-        <link rel="icon" type="image/x-icon" href="Images/bg.ico">
+        <link rel="stylesheet" href="general.css">
+        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="contact.css">
+        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="media-queries.css">
+        <link rel="stylesheet" href="services.css">
+        <link rel="stylesheet" href="testimonials.css">
+        <link rel="icon" type="image/x-icon" href="bg.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <script src="https://kit.fontawesome.com/daa0c8da58.js" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
                 <label for="menu-toogle" class="menu-icon"> &#9776; </label>
 
                 <div class="logo-wrapper">
-                    <img src="Images/B5 Beauty Glow logo.png" alt="Logo" class="logo">
+                    <img src="B5 Beauty Glow logo.png" alt="Logo" class="logo">
                 </div>
 
                 <ul class="nav-links">
@@ -55,7 +55,7 @@
             <!--Home Page-->
             <section class="home-page" id="HOME">
                 <div class="home-image">
-                    <img src="Images/bg.jpg" alt="home" class="background-image">
+                    <img src="bg.jpg" alt="home" class="background-image">
                 </div>
                 <div class="overlay-text">
                     <h1>B5 Beauty Glow.</h1>
@@ -66,7 +66,7 @@
             <!--About Page Section-->
             <section class="about-page" id="ABOUT">
                 <div class="about-image">
-                        <img src="Images/beauty products.jfif" alt="about">
+                        <img src="beauty products.jfif" alt="about">
                 </div>
                 <div class="about-container">
                     <h2>About Us</h2>
@@ -92,21 +92,21 @@
                 <div class="underline"></div>
                 <section class="service-container">
                     <div class="service-item">
-                        <img src="Images/facial-treatments.jpg" alt="facial care">
+                        <img src="facial-treatments.jpg" alt="facial care">
                         <p>                            
                             Comprehensive facial treatments to rejuvenate and refresh your skin.
                         </p>
                     </div>
                     <div class="service-item">
-                        <img src="Images/makeup.jpg" alt="makeup service">
+                        <img src="makeup.jpg" alt="makeup service">
                         <p>Professional makeup application for special occasions and everyday looks.</p>
                     </div>
                     <div class="service-item">
-                        <img src="Images/skincare.png" alt="skincare products">
+                        <img src="skincare.png" alt="skincare products">
                         <p>Effective skincare solutions for all skin types and concerns.</p>
                     </div>
                     <div class="service-item">
-                        <img src="Images/hair products.png" alt="hair care products">
+                        <img src="hair products.png" alt="hair care products">
                         <p>High-quality hair care products to nourish and style your hair.</p>
                     </div>
                 </section>
@@ -204,7 +204,7 @@
             </section>
 
             <div class="image-btn">
-                    <img src="Images/organic products.png" alt="contact us">
+                    <img src="organic products.png" alt="contact us">
             </div>
 
             <!--Contact Page Section-->
@@ -277,4 +277,5 @@
         </div>
     </div>
     </body>
+
 </html>
