Optimize images by adding loading attribute
Added loading attribute to images for better performance.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label for="menu-toogle" class="menu-icon"> &#9776; </label>
 
                 <div class="logo-wrapper">
-                    <img src="B5 Beauty Glow logo.png" alt="Logo" class="logo">
+                    <img src="B5 Beauty Glow logo.png" alt="Logo" class="logo" loading="lazy" >
                 </div>
 
                 <ul class="nav-links">
@@ -55,7 +55,7 @@
             <!--Home Page-->
             <section class="home-page" id="HOME">
                 <div class="home-image">
-                    <img src="bg.jpg" alt="home" class="background-image">
+                    <img src="bg.jpg" alt="home" class="background-image" loading="lazy" >
                 </div>
                 <div class="overlay-text">
                     <h1>B5 Beauty Glow.</h1>
@@ -66,7 +66,7 @@
             <!--About Page Section-->
             <section class="about-page" id="ABOUT">
                 <div class="about-image">
-                        <img src="beauty products.jfif" alt="about">
+                        <img src="beauty products.jfif" alt="about" loading="lazy" >
                 </div>
                 <div class="about-container">
                     <h2>About Us</h2>
@@ -92,21 +92,21 @@
                 <div class="underline"></div>
                 <section class="service-container">
                     <div class="service-item">
-                        <img src="facial-treatments.jpg" alt="facial care">
+                        <img src="facial-treatments.jpg" alt="facial care" loading="lazy" >
                         <p>                            
                             Comprehensive facial treatments to rejuvenate and refresh your skin.
                         </p>
                     </div>
                     <div class="service-item">
-                        <img src="makeup.jpg" alt="makeup service">
+                        <img src="makeup.jpg" alt="makeup service" loading="lazy" >
                         <p>Professional makeup application for special occasions and everyday looks.</p>
                     </div>
                     <div class="service-item">
-                        <img src="skincare.png" alt="skincare products">
+                        <img src="skincare.png" alt="skincare products" loading="lazy" >
                         <p>Effective skincare solutions for all skin types and concerns.</p>
                     </div>
                     <div class="service-item">
-                        <img src="hair products.png" alt="hair care products">
+                        <img src="hair products.png" alt="hair care products" loading="lazy" >
                         <p>High-quality hair care products to nourish and style your hair.</p>
                     </div>
                 </section>
@@ -204,7 +204,7 @@
             </section>
 
             <div class="image-btn">
-                    <img src="organic products.png" alt="contact us">
+                    <img src="organic products.png" alt="contact us" loading="lazy" >
             </div>
 
             <!--Contact Page Section-->
@@ -279,3 +279,4 @@
     </body>
 
 </html>
+
